added favicons, created mobile responisve promotions and rebar fabrication pages. removed the tools and products pages from all home page navs

--- a/html/promotions.html
+++ b/html/promotions.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v1">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v1">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/css/promotions.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <!-- Fonts -->
@@ -95,7 +104,7 @@
         <div id="bottom-nav-bar" class="side-nav" class="container">
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
-                <li class="about-li"><a class="active-menu" class="about-dropdown" href="about.html">ABOUT<i class="fas fa-chevron-down"></i></a>
+                <li class="about-li"><a class="about-dropdown" href="about.html">ABOUT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub1">
                         <li><a href="jobs.html">JOBS</a></li>
                         <li><a href="about.html">ABOUT VCS</a></li>
@@ -106,10 +115,8 @@
                         <li><a href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a href="materials.html">BUILDING MATERIALS</a></li>
-                        <li><a href="tool.html">TOOLS</a></li>
                     </ul>
                 </li>
-                <li><a href="products.html">PRODUCTS</a></li>
                 <li><a class="active-menu" href="promotions.html">PROMOTIONS</a></li>
                 <li class="contact-li"><a href="contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub3">
@@ -127,21 +134,145 @@
 
 <main id="main-content">
 
-        <!-- ============================================ -->
-        <!--                   LANDING                    -->
-        <!-- ============================================ -->
+    <!-- ============================================ -->
+    <!--                   LANDING                    -->
+    <!-- ============================================ -->
 
-        <section id="landing-page">
-            <div class="landing-dark"></div>
-            <div class="container landing-group">
-                <div class="landing-text">
+    <section id="landing-page">
+        <div class="landing-dark"></div>
+        <div class="container landing-group">
+            <div class="landing-text">
 
-                    <h1>About Valley Construction Supply</h1>
-                    
-                </div>
+                <h1>Current Promotions</h1>
+                
             </div>
-            <div class="clippy-desktop"></div>
-        </section>
+        </div>
+        <div class="clippy-desktop"></div>
+    </section>
+
+    <!-- ============================================ -->
+    <!--                  ADVANTECH                   -->
+    <!-- ============================================ -->
+
+    <section id="advantech-promotion" class="container">
+        <div class="experience">
+            <div class="image-box">
+                <img src="/images/advantech-product.jpg" alt="" height="400px" width="300px">
+            </div>
+            <div class="experience-content">
+                <h4>Advantech Subfloor Glue</h4>
+                <p class="promo">Promo Code</p>
+                <p class="code">VCS7ASUBFLKIT</p>
+                <h3>While Supplies Last</h3>
+                <P>For $95 you will recieve 6 cans of the Advantech sub floor glue, 1 can of cleaner,
+                    and 1 can of pro grade foam applicator (small gun) which sells for wholesale at $175.  
+                    Every 6 cans of Advantech glue equals 33 tubes of 28oz standard sub floor glue.
+                </P>
+                <ul class="list">
+                    <li class="header">Ideal For Wet Conditions
+                        <ul>
+                            <li>Formulated to adhere to wet and frozen structural subfloor panels and joists.  
+                                This moisture curing poly adhesive is the ideal solution for not so ideal weather conditions.
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="header">More Coverage In Each Can
+                        <ul>
+                            <li>8X greater yeilds thn traditional adhesive caulk means advanced strength with fewer products.
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="header">Fills Gaps For A Tighter Bond
+                        <ul>
+                            <li>The foam to gel polyurethane formula expands into minor gaps between the subflooring panel and joist,
+                                maximizing adhesion for a tighter overall subflooring assembly.
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>Contact Valley Construction Supply at <span class="email">sales7@valleyconstructionsupply.com</span> for more information!</p>
+                <button class="solid gallery-button"  type="button" onclick="location.href='https://tryadvantechsfa.com/'">
+                    VISIT ADVANTECH
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+    <!--                    JOTO                      -->
+    <!-- ============================================ -->
+
+    <section id="advantech-promotion" class="container">
+        <div class="experience">
+            <div class="image-box joto-box">
+                <img src="/images/joto-vent.jpg" alt="" height="191px" width="300px">
+            </div>
+            <div class="experience-content">
+                <h4>Joto-Vent Systems</h4>
+                <p class="promo">Promo Code</p>
+                <p class="code">VCSJOTOVENT</p>
+                <h3>Buy One Joto-Vent system at $5.95 LF and receive 50% off the 2nd vent system.</h3>
+                <P>The Joto-Vent system is a perimeter vent system that uses a unique honeycomb vent that is 3/4" thick by 6" 
+                    wide that goes between the concrete foundation and the wooded sill plate.  The vent is installed around the complete 
+                    perimeter of your crawl space foundation to maximize the cross of ventilation and air flow into and out of the 
+                    crawl space.  This natural positive and negative air flow in and out of the crawl space preserves the life span 
+                    of the wooden frame of your house.
+                </P>
+                <h4>Key Features:</h4>
+                <ul class="list">
+                    <li class="header">Architectural Clean Finished Look
+                        <ul>
+                            <li>The custom coverings of the vent and its nice clean finished look sheds water coming off of the siding and acts
+                                as a water back splash.
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="header">The Houses Structural Integrity
+                        <ul>
+                            <li>Joto-Vent System is structurally sound vs. what is currently being used, because there is no need to put vent 
+                                boxes in the concrete foundation or cutting vent holes in the wooden rim joist.
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="header">Natural Air Flow
+                        <ul>
+                            <li>This natural positive and negative airflow in and out of the crawl space preserves the lifespan of the 
+                                wooden frame in your home.
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>Contact Valley Construction Supply at <span class="email">sales7@valleyconstructionsupply.com</span> for more information!</p>
+                <button class="solid gallery-button"  type="button" onclick="location.href='https://joto-vent.com/'">
+                    VISIT JOTO-VENT
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+    <!--                    15% OFF                   -->
+    <!-- ============================================ -->
+
+    <section id="advantech-promotion" class="container">
+        <div class="experience">
+            <div class="image-box group-box">
+                <img class="group" src="/images/group.png" alt="" height="400px" width="300px">
+            </div>
+            <div class="experience-content">
+                <h4>Open New List Account For 15% Off Your Furst 3 Billing Cycles</h4>
+                <h3>Unlock the benefits! Open you new account today!</h3>
+                <P>Open a new list account and receive an additional 15% discount for the first 3 billing cycles 
+                   Our normal terms on a list account usually has a 10% disocunt when your bill is paid 
+                   by the 10th.
+                </P>
+                <p>Contact Valley Construction Supply at <span class="email">sales7@valleyconstructionsupply.com</span> for more information!</p>
+                <button class="solid gallery-button"  type="button" onclick="location.href='contact.html'">
+                    CALL VALLEY
+                </button>
+            </div>
+        </div>
+    </section>
 </main>
 
 <footer>
