--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v1">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v1">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/root-styles.css">
     <link rel="stylesheet" href="css/style.css">
@@ -96,10 +105,10 @@
             <div id="bottom-nav-bar" class="side-nav" class="container">
                 <ul id="main-navigation" class="side-nav">
                     <li><a class="active-menu" href="index.html">HOME</a></li>
-                    <li class="about-li"><a class="about-dropdown" href="html/about.html">ABOUT<i class="fas fa-chevron-down"></i></a>
+                    <li class="about-li"><a class="about-dropdown" href="#">ABOUT<i class="fas fa-chevron-down"></i></a>
                         <ul class="sub-nav sub1">
-                            <li><a href="html/jobs.html">JOBS</a></li>
-                            <li><a href="html/about.html">ABOUT VCS</a></li>
+                            <li><a class="about-drop-link" href="html/jobs.html">JOBS</a></li>
+                            <li><a class="about-drop-link" href="html/about.html">ABOUT VCS</a></li>
                         </ul>
                     </li>
                     <li class="services-li"><a href="html/services.html">SERVICES<i class="fas fa-chevron-down"></i></a>
