--- a/html/services.html
+++ b/html/services.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v1">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v1">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
     <link rel="stylesheet" href="/css/services.css">
@@ -104,10 +113,8 @@
                         <li><a href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a href="materials.html">BUILDING MATERIALS</a></li>
-                        <li><a href="tool.html">TOOLS</a></li>
                     </ul>
                 </li>
-                <li><a href="products.html">PRODUCTS</a></li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
                 <li class="contact-li"><a href="contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub3">
