added concrete and credit app page, added gallery to the navbar

--- a/html/about.html
+++ b/html/about.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="location-info">
                         <p>Hours</p>
-                        <p>Mon-Fri: 9am - 5pm</p>
+                        <p>Mon-Fri: 7am - 4pm</p>
                     </div>
                 </div>
             </div>
@@ -116,6 +116,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
+                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a href="contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub3">
                         <li><a href="apply.html">APPLY FOR CREDIT</a></li>
@@ -156,10 +157,10 @@
     <!-- ============================================ -->
 
     <section id="communities" class="container">
-        <h2><span>Building</span> Lasting Relationships</h2>
-        <p class="sub-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-           Iste repellendus itaque vitae, hic magni, perferendis corrupti 
-           earum ratione, ut excepturi delectus nesciunt fugit illo quos.</p>
+        <h2><span>Building</span> Strong Relationships</h2>
+        <p class="sub-text">Valley construction supply builds long lasting strong relationships 
+            through networking , customer service , Knowledgeable sales staff, having what the 
+            customer needs on our shelves & next day deliveries.</p>
         <div class="experience">
             <div class="image-box">
                 <img src="/images/scaffold.jpg" alt="" height="400px" width="300px">
@@ -167,15 +168,16 @@
             <div class="experience-content">
                 <p><span>35</span></p>
                 <p>Years<br> of Experience</p>
+                <h3>Valley's History</h3>
+                <p>In 1982 Cliff Beatty founded Valley Construction Supply with the sole purpose of providing the region’s contractors with a reliable source for building materials at competitive prices. Being built on the ideals of honesty, dedication and leadership, almost 40 years later Valley Construction Supply is still family owned and operated by Cliff’s son, Mark Beatty who continues with the same values. With a fleet of 25 trucks and two conveniently located warehouses, Pacific and Marysville, we are able to provide our customers with next day delivery. Our dedicated sales staff has an average of 25 years’ experience which gives them the ability to react to our customer’s needs. Valley Construction Supply is committed to putting customer service as a top priority in an ever changing building environment.</p>
                 <h3>Need Someone? We know someone</h3>
-                <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique 
-                   rerum corrupti et? Omnis ea labore modi voluptatibus fugiat dolor 
-                   eaque blanditiis? Sed modi eaque, eveniet non, at voluptas voluptatibus 
-                   tempora dignissimos rerum ducimus hic dolore ratione quaerat eligendi 
-                   voluptates exercitationem laborum illum. Optio eos atque, a aspernatur 
-                   dolore error distinctio!</P>
-                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius repudiandae 
-                   minima doloremque? Id, ducimus consequuntur!</P>
+                <P>If your home builder  needs a quality foundation, excavator or a framing 
+                   contractor we have those strong relationships to pass on, we do the same 
+                   for our long time customers looking for new business and new relationships. 
+                   We call it the art of “NETWORKING” Connecting hard working, integrity driven  
+                   pro contractors with the top quality home builders in the greater Puget sound 
+                   area. At the end of the day “ all we have is our word “ and we at Valley 
+                   Construction Supply never take that lightly.</P>
                 <button class="solid gallery-button"  type="button" onclick="location.href='html/services.html'">
                     SEE OUR SERVICES
                 </button>
@@ -190,9 +192,12 @@
     <section id="mission">
         <div class="mission-content">
         <h2 class="container">Our Mission, Our Mission</h2>
-        <p class="container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dolores earum rerum 
-           ullam sunt consequatur voluptas, a obcaecati, assumenda libero, odit animi maiores quo 
-           molestias dicta magnam aut et ab?</p>
+        <p class="container">Valley Construction Supply's mission hasn't changed from the day Cliff Beatty 
+            opened the doors to passing it on to his son Mark Beatty. We strive to be loyal to our partners, 
+            build long lasting relationships with our customers, built on integrity while offering top-notch 
+            next day service to our customers. We have always offered fair pricing and spot on billing and most 
+            importantly our word is our bond. Thank you to the ever growing list of relationships we have 
+            developed over the 35+ years who stayed loyal to Valley Construction Supply.</p>
         </div>
         <div class="clippy-desktop-yellow"></div>  
         <div class="clippy-desktop"></div>              
