--- a/html/apply.html
+++ b/html/apply.html
@@ -16,7 +16,7 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/css/apply.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <!-- Fonts -->
@@ -86,7 +86,7 @@
                     </div>
                     <div class="location-info">
                         <p>Hours</p>
-                        <p>Mon-Fri: 9am - 5pm</p>
+                        <p>Mon-Fri: 7am - 4pm</p>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                 <li class="about-li"><a class="about-dropdown" href="about.html">ABOUT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub1">
                         <li><a href="jobs.html">JOBS</a></li>
-                        <li><a class="active-menu" href="about.html">ABOUT VCS</a></li>
+                        <li><a href="about.html">ABOUT VCS</a></li>
                     </ul>
                 </li>
                 <li class="services-li"><a href="services.html">SERVICES<i class="fas fa-chevron-down"></i></a>
@@ -118,6 +118,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
+                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="active-menu" href="contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub3">
                         <li><a class="active-menu" href="apply.html">APPLY FOR CREDIT</a></li>
@@ -134,21 +135,72 @@
 
 <main id="main-content">
 
-        <!-- ============================================ -->
-        <!--                   LANDING                    -->
-        <!-- ============================================ -->
+    <!-- ============================================ -->
+    <!--                   LANDING                    -->
+    <!-- ============================================ -->
 
-        <section id="landing-page">
-            <div class="landing-dark"></div>
-            <div class="container landing-group">
-                <div class="landing-text">
+    <section id="landing-page">
+        <div class="landing-dark"></div>
+        <div class="container landing-group">
+            <div class="landing-text">
 
-                    <h1>About Valley Construction Supply</h1>
-                    
-                </div>
+                <h1>LIST Credit Application</h1>
+                
             </div>
-            <div class="clippy-desktop"></div>
-        </section>
+        </div>
+        <div class="clippy-desktop"></div>
+    </section>
+
+    <!-- ============================================ -->
+    <!--               CREDIT APPLICATION             -->
+    <!-- ============================================ -->
+
+    <section id="credit-app-google-doc-preview">
+        <div class="credit-container container">
+            <p>For all credit application inquiries, in order to process applications as fast as possible,
+                please make sure we have the following information:
+            </p>
+            <ul class="app-list">
+                <li>Whether a business or a home owner/builder, billing information, and and physical
+                    address must be filled in under firm name.
+                </li>
+                <li>Tax exempt customers must send a copy of their RESELLER'S PERMIT issued from 
+                    the state.
+                </li>
+                <li>
+                    Make sure the second page is signed.
+                </li>
+                <li>
+                    Fax application back to 206-343-5840, but please mail the application as we 
+                    need the original signiature on file.
+                </li>
+            </ul>
+            <p class="bottom-p">If you have any questions please call 253-447-2251.  Thank you for your inquiry and we look forward
+                to doing business with you.
+            </p>
+            <button class="solid app-button" type="submit" onclick="window.open('/images/CREDIT-APP-LIST.pdf')">
+                CLICK TO DOWNLOAD
+            </button>
+            <div class="iframe">
+                <iframe src="https://drive.google.com/file/d/1pjCjjDudAK9mliaIcYbuiC9z84Qz8sL-/preview" width="640" height="780"></iframe>
+            </div>
+        </div>
+        <div class="clippy-sales"></div>
+    </section>
+
+    <!-- ============================================ -->
+	<!--                    CONTACT                   -->
+    <!-- ============================================ -->
+
+    <section id="contact">
+        <div class="contact-group container">
+            <h2>Questions? Get in touch today.</h2>
+            <button class="solid about-content-button contact-button"  type="button" onclick="location.href='html/contact.html'">
+                CONTACT VCS
+            </button>
+        </div>
+    </section>
+
 </main>
 
 <footer>
