--- a/html/contact.html
+++ b/html/contact.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="location-info">
                         <p>Hours</p>
-                        <p>Mon-Fri: 9am - 5pm</p>
+                        <p>Mon-Fri: 7am - 4pm</p>
                     </div>
                 </div>
             </div>
@@ -118,6 +118,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
+                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="active-menu" href="contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub3">
                         <li><a href="apply.html">APPLY FOR CREDIT</a></li>
@@ -238,10 +239,9 @@
 
     <section id="contact-bottom">
         <div class="contact-group container">
-            <h2>Learn more about VCS</h2>
-            <button class="solid about-content-button contact-button"  type="button" onclick="location.href='html/about.html'">
-                ABOUT US
-            </button>
+            <h2>Thank You for taking the first step in building a relationship 
+                with VCS. We appreciate your time, and we look forward to working 
+                with you!</h2>
         </div>
         <div class="clippy-form"></div>
     </section>
