--- a/html/gallery.html
+++ b/html/gallery.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="location-info">
                         <p>Hours</p>
-                        <p>Mon-Fri: 9am - 5pm</p>
+                        <p>Mon-Fri: 7am - 4pm</p>
                     </div>
                 </div>
             </div>
@@ -104,10 +104,10 @@
         <div id="bottom-nav-bar" class="side-nav" class="container">
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
-                <li class="about-li"><a class="active-menu" class="about-dropdown" href="about.html">ABOUT<i class="fas fa-chevron-down"></i></a>
+                <li class="about-li"><a class="about-dropdown" href="about.html">ABOUT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub1">
                         <li><a href="jobs.html">JOBS</a></li>
-                        <li><a class="active-menu" href="about.html">ABOUT VCS</a></li>
+                        <li><a href="about.html">ABOUT VCS</a></li>
                     </ul>
                 </li>
                 <li class="services-li"><a href="services.html">SERVICES<i class="fas fa-chevron-down"></i></a>
@@ -118,6 +118,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
+                <li><a class="active-menu" href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a href="contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub3">
                         <li><a href="apply.html">APPLY FOR CREDIT</a></li>
