--- a/html/promotions.html
+++ b/html/promotions.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="location-info">
                         <p>Hours</p>
-                        <p>Mon-Fri: 9am - 5pm</p>
+                        <p>Mon-Fri: 7am - 4pm</p>
                     </div>
                 </div>
             </div>
@@ -118,6 +118,7 @@
                     </ul>
                 </li>
                 <li><a class="active-menu" href="promotions.html">PROMOTIONS</a></li>
+                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a href="contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub3">
                         <li><a href="apply.html">APPLY FOR CREDIT</a></li>
