--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div id="bottom-nav-bar" class="side-nav" class="container">
                 <ul id="main-navigation" class="side-nav">
                     <li><a class="active-menu" href="index.html">HOME</a></li>
-                    <li class="about-li"><a class="about-dropdown" href="#">ABOUT<i class="fas fa-chevron-down"></i></a>
+                    <li class="about-li"><a class="about-dropdown" href="html/about.html">ABOUT<i class="fas fa-chevron-down"></i></a>
                         <ul class="sub-nav sub1">
                             <li><a class="about-drop-link" href="html/jobs.html">JOBS</a></li>
                             <li><a class="about-drop-link" href="html/about.html">ABOUT VCS</a></li>
@@ -119,6 +119,7 @@
                         </ul>
                     </li>
                     <li><a href="html/promotions.html">PROMOTIONS</a></li>
+                    <li><a href="html/gallery.html">GALLERY</a></li>
                     <li class="contact-li"><a href="html/contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                         <ul class="sub-nav sub3">
                             <li><a href="html/apply.html">APPLY FOR CREDIT</a></li>
@@ -376,9 +377,8 @@
                 <img src="../images/net-zero.jpg" alt="">
                 <div class="future-card-content container">
                     <h3>Energy Code</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Quasi asperiores explicabo eius deleniti, earum sed labore 
-                    unde! Debitis, explicabo officiis!
+                    <p>At VCS we work really hard to stay in the loop on the Energy Code 
+                       changes and the new products that our customers need to know about. 
                     </p>
                     <button type="button" onclick="location.href='html/energy-code.html'">
                         Read More<i class="fas fa-chevron-right"></i>
@@ -389,9 +389,8 @@
                 <img src="../images/green-building.jpg" alt="">
                 <div class="future-card-content container">
                     <h3>Supporting Green Builders</h3>
-                    <p>We sell products to any builders that consider themselves 
-                       to be green builders who want to use energy efficient materials 
-                       and products.
+                    <p>Valley Construction Supply currently supports multiple customers who 
+                       have established their companies as leaders in "Green Building" industry. 
                     </p>
                     <button type="button" onclick="location.href='html/services.html'">
                         Read More<i class="fas fa-chevron-right"></i>
