--- a/html/materials.html
+++ b/html/materials.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="location-info">
                         <p>Hours</p>
-                        <p>Mon-Fri: 9am - 5pm</p>
+                        <p>Mon-Fri: 7am - 4pm</p>
                     </div>
                 </div>
             </div>
@@ -118,6 +118,7 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
+                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a href="contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
                     <ul class="sub-nav sub3">
                         <li><a href="apply.html">APPLY FOR CREDIT</a></li>
@@ -134,21 +135,44 @@
 
 <main id="main-content">
 
-        <!-- ============================================ -->
-        <!--                   LANDING                    -->
-        <!-- ============================================ -->
+    <!-- ============================================ -->
+    <!--                   LANDING                    -->
+    <!-- ============================================ -->
 
-        <section id="landing-page">
-            <div class="landing-dark"></div>
-            <div class="container landing-group">
-                <div class="landing-text">
+    <section id="landing-page">
+        <div class="landing-dark"></div>
+        <div class="container landing-group">
+            <div class="landing-text">
 
-                    <h1>About Valley Construction Supply</h1>
-                    
-                </div>
+                <h1>About Valley Construction Supply</h1>
+                
             </div>
-            <div class="clippy-desktop"></div>
-        </section>
+        </div>
+        <div class="clippy-desktop"></div>
+    </section>
+
+    <!-- ============================================ -->
+    <!--                     MAIN                     -->
+    <!-- ============================================ -->
+
+    <section>
+        <div class="left">
+            <ul>
+                <li>EXCAVATION
+                    <ul>
+                        <li></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="middle">
+
+        </div>
+        <div class="right">
+
+        </div>
+    </section>
+
 </main>
 
 <footer>
