added the drop down functionality for mobile nav

--- a/index.html
+++ b/index.html
@@ -105,24 +105,26 @@
             <div id="bottom-nav-bar" class="side-nav" class="container">
                 <ul id="main-navigation" class="side-nav">
                     <li><a class="active-menu" href="index.html">HOME</a></li>
-                    <li class="about-li"><a class="about-dropdown" href="html/about.html">ABOUT<i class="fas fa-chevron-down"></i></a>
+                    <li class="about-li"><i class="fas fa-chevron-down about-dropdown icon-drop"></i><a class="a-link" href="html/about.html">ABOUT</a>
                         <ul class="sub-nav sub1">
                             <li><a class="about-drop-link" href="html/jobs.html">JOBS</a></li>
                             <li><a class="about-drop-link" href="html/about.html">ABOUT VCS</a></li>
                         </ul>
                     </li>
-                    <li class="services-li"><a href="html/services.html">SERVICES<i class="fas fa-chevron-down"></i></a>
+                    <li class="services-li"><i class="fas fa-chevron-down service-dropdown icon-drop"></i><a class="s-link" href="html/services.html">SERVICES</a>
                         <ul class="sub-nav sub2">
-                            <li><a href="html/rebar-fabrication.html">REBAR FABRICATION</a></li>
-                            <li><a href="html/concrete.html">CONCRETE ACCESSORIES</a></li>
-                            <li><a href="html/materials.html">BUILDING MATERIALS</a></li>
+                            <li><a id="contact-width-change" class="service-drop-link"href="html/services.html">OUR SERVICES</a></li>
+                            <li><a id="contact-width-change" class="service-drop-link" href="html/rebar-fabrication.html">REBAR FABRICATION</a></li>
+                            <li><a id="contact-width-change" class="service-drop-link" href="html/concrete.html">CONCRETE ACCESSORIES</a></li>
+                            <li><a id="contact-width-change" class="service-drop-link"href="html/materials.html">BUILDING MATERIALS</a></li>
                         </ul>
                     </li>
                     <li><a href="html/promotions.html">PROMOTIONS</a></li>
                     <li><a href="html/gallery.html">GALLERY</a></li>
-                    <li class="contact-li"><a href="html/contact.html">CONTACT<i class="fas fa-chevron-down"></i></a>
+                    <li class="contact-li"><i class="fas fa-chevron-down contact-dropdown icon-drop"></i><a class="c-link" href="html/contact.html">CONTACT</a>
                         <ul class="sub-nav sub3">
-                            <li><a href="html/apply.html">APPLY FOR CREDIT</a></li>
+                            <li><a id="contact-width-change" class="contact-drop-link"href="html/contact.html">CONTACT VCS</a></li>
+                            <li><a id="contact-width-change" class="contact-drop-link" href="html/apply.html">APPLY FOR CREDIT</a></li>
                         </ul>
                     </li>
                 </ul>
